# ever2e-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README
.github/workflows/: ci.yml
docs/: apple2e_softswitch_behavior.md  diskii_p6_disassembly_references.md
docs/g65sc02_refs/: README.md  cmd_g65sc02_cycles_page9.html  cmd_g65sc02_microcode_matrix.csv  g65sc02_cmd_vs_java_cycles.csv  g65sc02_cmd_vs_java_cycles.md  g65sc02_cycle_table_from_java.csv  g65sc02_vs_java_opcode_table.csv  g65sc02_vs_java_opcode_table.md
include/: SDL.h  SDL_endian.h  SDL_image.h  SDL_stdinc.h  card16bit.h  colorconv.h  cpu65c02.h  drive5_25.h  eventloop.h  hostkey.h  joystick8bit.h  keyboard2e.h  keytrans2e.h  manager.h  memory128k.h  mon560x192.h  mouse8bit.h  pixel.h  savestate.h  sound.h  speaker1bit.h
include/cpu/: cpu65c02_cmd_profile.h  cpu65c02_microcode.h  cpu65c02_opcode.h  cpu65c02_opcode_view.h
release/: Apple2eNoSlots.emu  LICENSE  README  color_bars.bas  color_blocks.bas  color_test.bas  dhgr_lines.bas  opcode_smoke_loader_hgr_mem_16k.mon  opcode_smoke_loader_hgr_mem_32k.mon  stderr.txt  stdout.txt  test_40_80_split.bas  winter.bas
samples/: Shortcut to ever2e.exe.lnk  a.bas  b.bas  hgr_lines.bas  maze.bas  pong.bas  quick_flip.bas  saved.bas  test_dsplit.bas  test_nop.bas  test_reg.bas  test_split.bas
scripts/macos/: build.sh  clean.sh  run.sh  run_generated_tests.sh  run_main_tests.sh  run_microcode_tests.sh  run_smoke.sh  run_trace_baseline.sh
src/: card16bit.cpp  colorconv.cpp  cpu65c02.cpp  drive5_25.cpp  eventloop.cpp  ever2e.cpp  hostkey.cpp  joystick8bit.cpp  keyboard2e.cpp  keytrans2e.cpp  manager.cpp  memory128k.cpp  mon560x192.cpp  mouse8bit.cpp  pixel.cpp  savestate.cpp  sound.cpp  speaker1bit.cpp
tools/: dsk_to_nib.cpp  gen_floating_bus_oracle_py.py
(+28 files in other folders)
